[gd_scene load_steps=4 format=3 uid="uid://cn2keqrit0o6y"]

[ext_resource type="Script" uid="uid://00gmaacbp6cj" path="res://diamonds_bar.gd" id="1_gf5au"]
[ext_resource type="Texture2D" uid="uid://b6kybeb8ff7r0" path="res://assets/ui/hud_diamond_empty.png" id="2_trjd1"]
[ext_resource type="Texture2D" uid="uid://db3ur21haqyf5" path="res://assets/ui/hud_diamond.png" id="3_rufqk"]

[node name="diamonds_bar" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 62.0
mouse_filter = 2
script = ExtResource("1_gf5au")
metadata/_edit_use_anchors_ = true

[node name="diamonds" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="diamond1" type="TextureRect" parent="diamonds"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_trjd1")
expand_mode = 1
stretch_mode = 5

[node name="tween_diamond1" type="TextureRect" parent="diamonds/diamond1"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(64, 62)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rufqk")
expand_mode = 1
stretch_mode = 5

[node name="diamond2" type="TextureRect" parent="diamonds"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_trjd1")
expand_mode = 1
stretch_mode = 5

[node name="tween_diamond2" type="TextureRect" parent="diamonds/diamond2"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(64, 62)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rufqk")
expand_mode = 1
stretch_mode = 5

[node name="diamond3" type="TextureRect" parent="diamonds"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_trjd1")
expand_mode = 1
stretch_mode = 5

[node name="tween_diamond3" type="TextureRect" parent="diamonds/diamond3"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(64, 62)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rufqk")
expand_mode = 1
stretch_mode = 5
